<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AutoTask</string>
    <string name="newTaskButtonText">New Task</string>
    <string name="taskListButtonText">Task List</string>
    <string name="newTaskNameEditText">Task name</string>
    <string name="actions">Actions</string>
    <string name="triggers">Triggers</string>
    <string name="addNew">Add new...</string>
    <string name="add_trigger">Add trigger</string>
    <string name="add_action">Add action</string>
    <string name="finish">Finish</string>
    <string name="saveTaskTitleAlert">Save task</string>
    <string name="doYouWantSave">Do you want to save this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="autotask">Autotask</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="confirm">Confirm</string>
    <string name="bluetoothTriggerConfigTitle">Bluetooth trigger configuration</string>
    <string name="bluetoothTrigger">Bluetooth trigger</string>
    <string name="ifString">If</string>
</resources>
